test/files/neg/t13006.check
t13006.scala:7: warning: class C is deprecated
  type X[T] = C[T] // warn
              ^
t13006.scala:17: warning: class C is deprecated
  def t3 = C.apply(20)   // warn
             ^
t13006.scala:18: warning: class C is deprecated
  def t4 = new C(10)     // warn
               ^
t13006.scala:21: warning: constructor D in class D is deprecated
  def u1 = A.Y.apply(10) // warn
               ^
t13006.scala:22: warning: constructor D in class D is deprecated
  def u2 = new A.Y(10)   // warn
           ^
t13006.scala:23: warning: constructor D in class D is deprecated
  def u3 = D.apply(10)   // warn
             ^
t13006.scala:24: warning: constructor D in class D is deprecated
  def u4 = new D(10)     // warn
           ^
t13006.scala:34: warning: class C in object oho is deprecated
  def t1 = oho.C(10) // warn
               ^
t13006.scala:35: warning: constructor D in class D is deprecated
  def t2 = oho.D(10) // warn
               ^
error: No warnings can be incurred under -Werror.
9 warnings
1 error
